remove deprecated URL API usage